--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Upload EXE to GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        files: dist/main.exe
+        files: dist/resistor_finder.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
